@@ -1,6 +1,6 @@
 Package: vcd
 Version: 1.3-3
-Date: 2014-12-18
+Date: 2015-3-9
 Title: Visualizing Categorical Data
 Authors@R: c(person(given = "David", family = "Meyer", role = c("aut", "cre"), email = "David.Meyer@R-project.org"),
              person(given = "Achim", family = "Zeileis", role = c("aut")),
